fix error for dornbusch